fix(ffe-lists): tekst-overflow i lister

--- a/packages/ffe-lists/less/regular-lists.less
+++ b/packages/ffe-lists/less/regular-lists.less
@@ -61,6 +61,7 @@
     > .ffe-bullet-list__item {
         margin-top: @ffe-spacing-xs;
         margin-left: @ffe-spacing-sm;
+        overflow-wrap: anywhere;
     }
 }
 
@@ -185,4 +186,5 @@
 .ffe-stylized-numbered-list__item-content {
     grid-column: 2/3;
     grid-row: 1/-1;
+    overflow-wrap: anywhere;
 }
